--- a/javajam/javajam.css
+++ b/javajam/javajam.css
@@ -159,6 +159,14 @@ img {
 	background-size: 100% 100%;
 }
 
+#herocouch {
+	height: 300px;
+	background-image: url(images/herocouch.jpg);
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+}
+
+
 #mobile {
 	display: inline;
 }
@@ -201,6 +209,18 @@ form {
 input,
 textarea {
 	margin-bottom: .5em;
+}
+
+
+.item {
+	background-color: #FAF9F7;
+	margin: 1em;
+	padding: 1em;
+	overflow: auto;
+}
+
+.item img {
+	float: right;
 }
 
 
